refactor: make WebDriver and WebDriverWait fields final and improve null checks in page classes